Fixed alignment and responsive stuff

--- a/background-image.css
+++ b/background-image.css
@@ -10,6 +10,13 @@
     background: url(images/photo-1429962714451-bb934ecdc4ec.jpg) no-repeat center center fixed;
 }
 
-select:after {
-    content: none;
- }
+.buttons-container {
+    display: flex;
+    align-items: center;
+}
+
+@media only screen and (max-width: 720px) {
+    .buttons-container {
+        flex-direction: column;
+    }
+}
